z index issue with overlap on animalinput

--- a/adopt-a-pet-next/styles/AnimalInput.module.css
+++ b/adopt-a-pet-next/styles/AnimalInput.module.css
@@ -23,7 +23,7 @@
     background-color: rgba(193, 207, 207, 50%);
     padding: 2rem;
     border-radius: 3px;
-    z-index: 998;
+    z-index: 999;
     /* outline: 10px solid red; */
     
 }
@@ -34,8 +34,12 @@
     width: inherit;
     padding: .1rem;
     margin: .01rem;
+    z-index: 999;
     
     
+}
+.inputAnimalType{
+    z-index: 1;
 }
 .shelterContainer{
     margin: 2rem;
@@ -48,7 +52,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 999;
+    /* z-index: 997; */
     background: #f2f2f275;
     width: inherit;
 }
