--- a/adopt-a-pet-next/styles/Card.module.css
+++ b/adopt-a-pet-next/styles/Card.module.css
@@ -40,7 +40,8 @@
     padding: 1rem;
     margin: 0;
     font-size: 1.5rem;
-    border-radius: 1rem;
+    
+    /* border-radius: 1rem; */
     line-height: 1.5;
   }
 
